--- a/partials/user-partials/user-nav.ejs
+++ b/partials/user-partials/user-nav.ejs
@@ -31,12 +31,19 @@
             <i class="fa-solid fa-user" style="color: #000000;"></i>
             <% } %>
           </button>
-          <ul class="dropdown-menu m-0 p-0 bg-black" aria-labelledby="dropdownMenuButton2">
+          <ul class="dropdown-menu m-0 p-0 p-3 bg-black" aria-labelledby="dropdownMenuButton2">
             <% if(locals?.user) {%>
-            <li><a class="dropdown-item active bg-black" href="/user-dashboard">Dashboard</a></li>
-            <li><a class="dropdown-item active bg-black" href="/user-signout">Sign out</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard">My dashboard</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-address-book">My addressbook</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-wallet">My wallet</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-cart">My cart</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-wish-lists">My wish lists</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-orders">My orders</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-returns">My returns</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-cancellations">My cancellations</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2 text-primary" href="/user-signout">Sign out</a></li>
             <% }else { %>
-            <li><a class="dropdown-item active bg-black" href="/user-login">Login</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 text-primary" href="/user-login">Login</a></li>
             <% } %>
           </ul>
         </div>
