--- a/views/user-pages/userDashboardWalletPage.ejs
+++ b/views/user-pages/userDashboardWalletPage.ejs
@@ -32,23 +32,16 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-10 p-2">
           <% if (paginatedUserWallet?.length === 0) { %>
-            <div class="row m-0 p-0 border rounded-3">
-              <h6 class="text-danger font-size m-0 pb-3 animate__animated animate__flash " colspan="5"><em>Your haven`t ordered a product yet</em></h6>
-            </div>
+          <div class="row m-0 p-0 border rounded-3">
+            <h6 class="text-danger font-size m-0 py-3 animate__animated animate__flash " colspan="5"><em>Your haven`t activated your wallet yet</em></h6>
+          </div>
           <% } %>
           <% if (paginatedUserWallet?.length > 0) { %>
           <div class="row m-0 p-0 border rounded-3">
             <div class="col-md-12 col-lg-6 m-0 p-0">
-              <div class="row p-3 m-3 border rounded-3">
+              <div class="row p-3 m-3 border rounded-3 ">
                 <p class="font-size-bold pb-2 text-primary m-0 p-0 fst-italic">Wallet details <span class="font-size-bold">&gt;&gt;</span> </p>
                 <% const walletID = "clothSTORE_" + userWallet[0]?._id.toString().slice(-8); %>
-                <% const totals = paginatedUserWallet?.reduce((acc, element) => {
-                  acc.balance += parseFloat(element?.balance);
-                  return acc;
-                }, {
-                  balance: 0,
-                }); %>
-
                 <div class="col-sm-12 col-md-12 col-lg-12 d-flex m-0 p-0">
                   <div class="col-4">
                     <p class="m-0 p-0 my-1 text-black text-start font-size">Wallet ID</p>
@@ -60,8 +53,21 @@
                   </div>
                   <div class="col-7">
                     <p class="m-0 p-0 my-1 text-black text-end font-size-bold"><%= walletID %></p>
-                    <p class="m-0 p-0 my-1 text-black text-end font-size-bold">&#8377;&nbsp;<%= totals?.balance?.toFixed(2) %></p>
+                    <% if (userWallet[0]?.totalBalance > 0) { %>
+                    <p class="m-0 p-0 text-end font-size-bold pt-1" style="color: rgb(50, 202, 50);">
+                      <%= userWallet[0]?.totalBalance?.toFixed(2) %>&nbsp;&#8377;
+                    </p>
+                    <% } else { %>
+                    <p class="m-0 p-0 text-end font-size-bold pt-1" style="color: rgb(248, 20, 20);">
+                      <%= userWallet[0]?.totalBalance?.toFixed(2) %>&nbsp;&#8377;
+                    </p>
+                    <% } %>
                   </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-end align-items-center m-0 mt-3 p-0">
+                  <button type="button" id="walletTopup"  class="w-25 btn-sm bg-black border-0 font-size-bold py-2 px-2 rounded-2 text-white">
+                    <i class="fa-solid fa-wallet fa-xl fa-bounce pe-2 text-primary"></i>Top Up
+                  </button>
                 </div>
               </div>
             </div>
@@ -72,9 +78,9 @@
                 <div class="col-sm-6 col-md-6 col-lg-4 p-0">
                   <p class="m-0 p-0 text-secondary font-size text-start py-1 border-bottom fst-italic"><%= index+ 1%>. Transaction</p>
                   <p class="m-0 p-0 text-black font-size text-start pt-1">Amount</p>
-                  <p class="m-0 p-0 text-black font-size text-start">Credited against</p>
-                  <p class="m-0 p-0 text-black font-size text-start">Credited for</p>
-                  <p class="m-0 p-0 text-black font-size text-start">Credited on</p>
+                  <p class="m-0 p-0 text-black font-size text-start">Debited/Credited against</p>
+                  <p class="m-0 p-0 text-black font-size text-start">Debited/Credited for</p>
+                  <p class="m-0 p-0 text-black font-size text-start">Debited/Credited on</p>
                 </div>
                 <div class="col-sm-1 col-md-1 col-lg-1 p-0">
                   <p class="m-0 p-0 text-secondary text-center font-size py-1 border-bottom fst-italic">&nbsp;</p>
@@ -86,11 +92,36 @@
                 <div class="col-sm-5 col-md-5 col-lg-7 p-0">
                   <% const Refference = "Refference_" + el._id.toString().slice(-8) %>
                   <p class="m-0 p-0 text-end font-size py-1  border-bottom text-secondary fst-italic"><%= Refference %></p>
-                  <p class="m-0 p-0 text-end font-size-bold pt-1" style="color: rgb(50, 202, 50);"><%= el?.balance?.toFixed(2) %>&nbsp;&#8377;</p>
-                  <% const creditedFor = el?.creditedFor === 'wallet created' ? el?.creditedFor : 'credited for ' + el?.creditedFor + ' order'%>
-                  <% const orderID = el?.creditedAgainst ? "clothSTORE_" + el.creditedAgainst.toString().slice(-8) : "wallet created"  %>
-                  <p class="m-0 p-0 text-primary text-end font-size fst-italic"><%= orderID %></p>
-                  <p class="m-0 p-0 text-primary text-end font-size fst-italic"><%= creditedFor %></p>
+                  <% if (el?.balance >= 0) { %>
+                  <p class="m-0 p-0 text-end font-size-bold pt-1 fst-italic" style="color: rgb(50, 202, 50);">
+                    <%= el?.balance?.toFixed(2) %>&nbsp;&#8377;
+                  </p>
+                  <% } else { %>
+                  <p class="m-0 p-0 text-end font-size-bold pt-1 fst-italic" style="color: rgb(248, 20, 20);">
+                    <%= el?.balance?.toFixed(2) %>&nbsp;&#8377;
+                  </p>
+                  <% } %>
+
+
+                  <% const orderID = el?.creditedAgainst ? "clothSTORE_" + el.creditedAgainst.toString().slice(-8) : "----"  %>
+                  <% if (el?.creditedAgainst) { %>
+                  <p class="m-0 p-0 text-end font-size pt-1 fst-italic" style="color: rgb(248, 20, 20);">
+                    <%= orderID %>
+                  </p>
+                  <% } else { %>
+                  <p class="m-0 p-0 text-end font-size pt-1 fst-italic" style="color: rgb(50, 202, 50);">
+                    <%= orderID %>
+                  </p>
+                  <% } %>
+                  <% if (el?.creditedFor === 'Wallet created' || el?.creditedFor ===  'Wallet top-up') { %>
+                  <p class="m-0 p-0 text-end font-size pt-1 fst-italic" style="color: rgb(50, 202, 50);">
+                    <%= el?.creditedFor %>
+                  </p>
+                  <% } else { %>
+                  <p class="m-0 p-0 text-end font-size pt-1 fst-italic" style="color: rgb(248, 20, 20);">
+                    <%= el?.creditedFor %>
+                  </p>
+                  <% } %>
                   <p class="m-0 p-0 text-secondary text-end font-size fst-italic">
                     <%= el?.createdDate?.toLocaleString("en-US", 
                       { 
@@ -148,9 +179,214 @@
             </div>
           </div>
           <% } %>
+
         </div>
       </div>
     </div>
+  </section>
+  <section>
+    <!-- Modal -->
+    <div class="modal fade" id="topupModal" tabindex="-1" aria-labelledby="topupModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title font-size-bold" id="topupModalLabel">Top-up Wallet</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="topupForm">
+              <div class="mb-3">
+                <label for="topupAmount" class="form-label font-size">Enter Top-up Amount</label>
+                <input type="number" class="form-control font-size" id="topupAmount" required>
+                <div id="topupAmountError" class="text-danger mt-2 font-size" style="display:none;">Please enter a valid amount greater than 0.</div>
+              </div>
+              <button type="button" class="btn btn-secondary font-size" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary font-size" id="confirmTopup">Confirm</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div hidden id="razorpay" data-keyId="<%= RAZORPAY_KEY_ID %>" data-keySecret="<%= RAZORPAY_KEY_SECRET%>"></div>
+  </section>
+  <section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- wallet top up -->
+    <script>
+      $(document).ready(function() {
+        let formData = {};
+
+        // Open modal on button click
+        $('#walletTopup').click(function() {
+          $('#topupModal').modal('show');
+        });
+
+        // Validate input field
+        $('#topupAmount').on('input', function() {
+          this.value = this.value.replace(/[^0-9]/g, '');
+        });
+
+        // Handle confirm button click
+        $('#confirmTopup').click(function() {
+          const topupAmount = $('#topupAmount').val();
+          if (topupAmount && parseInt(topupAmount) > 0) {
+            formData.amount = topupAmount * 100; // Convert to paise
+            $('#topupAmountError').hide();
+            $('#topupModal').modal('hide');
+            createRazorpayOrder(formData.amount);
+          } else {
+            $('#topupAmountError').show();
+          }
+        });
+
+        // Create Razorpay Order
+        async function createRazorpayOrder(topupAmount) {
+          try {
+            const response = await fetch('/create-order', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                amount: topupAmount
+              })
+            });
+            const data = await response.json();
+            console.log(data.order.id)
+            openRazorpay(data.order.id, topupAmount);
+          } catch (error) {
+            console.error('Error creating Razorpay order:', error);
+          }
+        }
+
+        // Open Razorpay
+        function openRazorpay(orderId, topupAmount) {
+          const options = {
+            "key": $('#razorpay').data('keyid'), // Get your Razorpay Key ID
+            "amount": topupAmount,
+            "currency": "INR",
+            "name": "clothSTORE",
+            "description": "Wallet Top-up",
+            "order_id": orderId,
+            "image": "/images/clothStore_favicon.jpg",
+            "handler": function(response) {
+              console.log(response, 'openRazorpay');
+              handlePaymentSuccess(response, orderId);
+            },
+            "prefill": {
+              "name": "Your Name",
+              "email": "your.email@example.com",
+              "contact": "9000090000"
+            },
+            "theme": {
+              "color": "#000000"
+            }
+          };
+          const rzp1 = new Razorpay(options);
+          rzp1.on('payment.failed', function(response) {
+            handlePaymentFailure(response);
+          });
+          rzp1.open();
+        }
+
+        // Handle payment success
+        function handlePaymentSuccess(response, orderId) {
+          console.log(response, 'handlePaymentSuccess')
+          $.ajax({
+            url: '/verify/payment/topup',
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({
+              paymentDetails: response,
+              amount: formData.amount,
+              orderId: orderId
+            }),
+            success: function(res) {
+              if (res.status) {
+                topupWallet(res.amount)
+              } else {
+                Swal.fire({
+                  title: 'Error!',
+                  text: res.message,
+                  icon: 'error',
+                  confirmButtonText: 'OK',
+                  confirmButtonColor: 'red'
+                });
+              }
+            },
+            error: function(err) {
+              Swal.fire({
+                title: 'Error!',
+                text: 'There was an issue processing your payment. Please try again.',
+                icon: 'error',
+                confirmButtonText: 'OK',
+                confirmButtonColor: 'red'
+              });
+            }
+          });
+        }
+
+        function topupWallet(amount) {
+          $.ajax({
+            url: '/wallet/topup',
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({
+              amount: amount / 100,
+            }),
+            success: function(res) {
+              if (res.status) {
+                Swal.fire({
+                  title: 'Success!',
+                  text: `Wallet top-up of Rs. ${amount / 100} was successful!`,
+                  icon: 'success',
+                  confirmButtonText: 'OK',
+                  confirmButtonColor: 'green'
+                }).then(() => {
+                  location.reload();
+                });
+              } else {
+                Swal.fire({
+                  title: 'Error!',
+                  text: res.message,
+                  icon: 'error',
+                  confirmButtonText: 'OK',
+                  confirmButtonColor: 'red'
+                });
+              }
+            },
+            error: function(err) {
+              Swal.fire({
+                title: 'Error!',
+                text: 'There was an issue processing your payment. Please try again.',
+                icon: 'error',
+                confirmButtonText: 'OK',
+                confirmButtonColor: 'red'
+              });
+            }
+          });
+        }
+
+        // Handle payment failure
+        function handlePaymentFailure(response) {
+          const errorMessage = `
+            <p style="text-align: left; font-size: 15px;">Reason: ${response.error.reason}</p>
+            <p style="text-align: left; font-size: 15px;">Order ID: ${response.error.metadata.order_id}</p>
+            <p style="text-align: left; font-size: 15px;">Payment ID: ${response.error.metadata.payment_id}</p>
+            <p style="text-align: left; font-size: 15px;">Info: ${response.error.description}</p>
+          `;
+          Swal.fire({
+            title: 'Error!',
+            html: errorMessage.trim(),
+            icon: 'error',
+            confirmButtonText: 'OK',
+            confirmButtonColor: 'red'
+          });
+        }
+      });
+    </script>
   </section>
 
   <!-- including admin footer  -->
