--- a/partials/user-partials/user-nav.ejs
+++ b/partials/user-partials/user-nav.ejs
@@ -41,9 +41,9 @@
             <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-orders">My orders</a></li>
             <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-returns">My returns</a></li>
             <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2" href="/user-dashboard-cancellations">My cancellations</a></li>
-            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 pb-2 text-primary" href="/user-signout">Sign out</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 text-primary font-size-bold" href="/user-signout">Sign out</a></li>
             <% }else { %>
-            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 text-primary" href="/user-login">Login</a></li>
+            <li class="m-0 p-0"><a class="dropdown-item active bg-black m-0 p-0 text-primary font-size-bold" href="/user-login">Login</a></li>
             <% } %>
           </ul>
         </div>
